--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,10 @@
   "name": "frontend",
   "proxy": "http://127.0.0.1:8000",
   "version": "0.1.0",
+  "engines": {
+    "node": "15.3.0",
+    "npm": "6.14.11"     
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
